# tenmado-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/.gcp_key/: tenmado-e62e929ddf4d.json
app/repositories/: weekweatherrepository.py
app/routers/: weatherforecastrouter.py
app/schemas/weatherforecast/: flattenkubun.py  forecast.py  kubun.py  kubunresponse.py  largearea.py  meteorogicalobservatory.py  meteorogicalobservatoryresponse.py  meteorologicalobservatory.py  meteorologicalobservatoryresponse.py  report.py  startdate.py  startdateresponse.py  weatherforecast.py  weatherforecastresponse.py
app/services/: weatherforecastservice.py
app/utils/: files.py
