[tool.poetry]
name = "tenmado-api"
version = "0.1.0"
description = ""
authors = ["杉本階嗣"]

[tool.poetry.dependencies]
python = "3.9.4"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
orjson = "^3.6.5"
google-cloud-core = "^2.2.1"
google-cloud-logging = "^2.7.0"
google-cloud-firestore = "^2.3.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
