[tool.poetry]
name = "tenmado-api"
version = "0.2.0"
description = ""
authors = ["杉本階嗣"]

[tool.poetry.dependencies]
python = "3.9.4"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
orjson = "^3.6.5"
google-cloud-core = "^2.2.1"
google-cloud-logging = "^2.7.0"
google-cloud-firestore = "^2.3.4"
pytz = "^2021.3"
python-dotenv = "^0.19.2"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
